fix spacing

--- a/public/assets/scss/default/_helpers.scss
+++ b/public/assets/scss/default/_helpers.scss
@@ -268,8 +268,3 @@
         @include bg-gradient($i);
     }
 }
-@media (max-width: 992px) {
-    .display-spacing {
-        padding-top: 90px !important;
-    }
-}
