--- a/public/assets/scss/sections/_services.scss
+++ b/public/assets/scss/sections/_services.scss
@@ -66,9 +66,6 @@
                 }
             }
         }
-        .slick-dots {
-            bottom: -6px !important
-        }
     }
 }
 
